--- a/src/app/practice-app/components/forms/form-practice.component.html
+++ b/src/app/practice-app/components/forms/form-practice.component.html
@@ -1,25 +1,18 @@
 <mat-card class="mat-card">
   <mat-card-content>
-            
-    <h3>
-      Label turns yellow when hovered over using custom directive
-    </h3>
-    
-    <div appHighlight>Custom directive example.</div>
+    <h3>Forms: Label turns yellow when hovered over using custom directive</h3>
 
+    <div appHighlight>Custom directive example.</div>
   </mat-card-content>
 </mat-card>
 
 <mat-card class="mat-card">
   <mat-card-content class="mat-card-content">
+    <h3>Forms: Display text from input element.</h3>
 
-    <h3>
-      Display text from input element. 
-    </h3>
-    
     <mat-form-field class="mat-form-field">
       <mat-label>Input</mat-label>
-      <input matInput [(ngModel)]="inputText">
+      <input matInput [(ngModel)]="inputText" />
     </mat-form-field>
     <mat-form-field class="mat-form-field">
       <mat-label>Select</mat-label>
@@ -34,20 +27,11 @@
     </mat-form-field>
 
     <div id="input-description-text">
+      <div id="input-text">Input Text: {{ inputText }}</div>
 
-      <div id="input-text">
-        Input Text: {{inputText}}
-      </div>
+      <div id="select-text">Select Text: {{ selectText }}</div>
 
-      <div id="select-text">
-        Select Text: {{selectText}}
-      </div>
-
-      <div>
-        Description Text: {{descriptionText}}
-      </div>
-      
+      <div>Description Text: {{ descriptionText }}</div>
     </div>
-
   </mat-card-content>
 </mat-card>
